--- a/gb/18/4/29/n10346474.md
+++ b/gb/18/4/29/n10346474.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rnrmrq3333/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rnrmrq3333/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rnrmrq3333/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>心理医生：神韵揭示人类回归神的真正意义</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/04/1804282336141973-1-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2018年04月29日讯】（大纪元记者良克霖美国纽瓦克报导）“法轮功虽然在中国被迫害，但实际上这个功法引领人回归神，找回精神信仰，这是我感受到的非常美好的讯息。演出揭示了人类回归神的真正意义。”医生Joe Wright感佩<ahref="https://github.com/rnrmrq3333/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术家们通过演出展现的<ahref="https://github.com/rnrmrq3333/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>。</p>
-<p>Joe Wright是美国一家军队医院的心理医生。4月28日晚，在观赏了<ahref="https://github.com/rnrmrq3333/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在<ahref="https://github.com/rnrmrq3333/djy/blob/master/gb/tag/%E7%BA%BD%E7%93%A6%E5%85%8B%E6%96%B0%E6%B3%BD%E8%A5%BF%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">纽瓦克新泽西表演艺术中心</a>的第三场演出后，他认为，神韵展现的美好<ahref="https://github.com/rnrmrq3333/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>，超越艺术本身，展现了神性内涵的精髓。</p>
+	<p>【大纪元2018年04月29日讯】（大纪元记者良克霖美国纽瓦克报导）“法轮功虽然在中国被迫害，但实际上这个功法引领人回归神，找回精神信仰，这是我感受到的非常美好的讯息。演出揭示了人类回归神的真正意义。”医生Joe Wright感佩<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术家们通过演出展现的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>。</p>
+<p>Joe Wright是美国一家军队医院的心理医生。4月28日晚，在观赏了<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BA%BD%E7%93%A6%E5%85%8B%E6%96%B0%E6%B3%BD%E8%A5%BF%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">纽瓦克新泽西表演艺术中心</a>的第三场演出后，他认为，神韵展现的美好<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>，超越艺术本身，展现了神性内涵的精髓。</p>
 <p>他说：“我喜欢神韵演出的一切，包括舞蹈、现场音乐，还有演出传达的讯息都非常美好。”他感到神韵与众不同，充满神性，“我认为精神内涵是神韵演出的精髓，演出通过美妙的音乐和舞蹈传递更深一层次的讯息，让人感到精神振奋。”</p>
 <p>他进一步解释：“在我看来，有些人可以把舞蹈跳得很好、把歌唱得很好，但他们仅仅是表现在我们这个物质世界中的东西。而神韵演出则不同，除这些外，她还有更深一层的内涵，展示了人类回归神的真正意义。这是我没有预想到的，但是我认为这是更美好的内涵，超越于艺术本身，展现了神性内涵的精髓。”</p>
 <p>神韵致力于恢复中国传统的神传文化，Wright对此非常认同，他认为变异的现代人类越来越迷失了方向。他说：“我个人认为全世界的人都越来越远离了神灵高于人类的事实。所有真正的信仰者都相信有高于人类的神，不仅在中国，在美国、全世界都是这么认为的。神来到世间救赎人类，这是各个真正宗教都笃信的事情。”他说，“我认为神韵复兴中华传统文化令人称道。”</p>
@@ -17,44 +17,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/4/1/n10268261.md#1">退休医生艳羡中华文化 广邀脸书好友观神韵</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/4/1/n10268428.md#1">神韵演员空翻技巧非凡 退休空军中校惊叹</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/4/1/n10268457.md#1">亚马逊项目经理：神韵传递重要信息</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/4/1/n10268493.md#1">银行财务顾问惊奇于神韵演出的精神内涵</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/4/1/n10268578.md#1">惠普拉美前副总裁赞神韵舞蹈感人</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/4/1/n10268654.md#1">记者赞神韵奇观“每个人都该看这演出”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/1/n10268261.md#1">退休医生艳羡中华文化 广邀脸书好友观神韵</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/1/n10268428.md#1">神韵演员空翻技巧非凡 退休空军中校惊叹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/1/n10268457.md#1">亚马逊项目经理：神韵传递重要信息</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/1/n10268493.md#1">银行财务顾问惊奇于神韵演出的精神内涵</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/1/n10268578.md#1">惠普拉美前副总裁赞神韵舞蹈感人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/1/n10268654.md#1">记者赞神韵奇观“每个人都该看这演出”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/14/n12688510.md#1">古籍记载：死而复活的人讲述前后因果</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/13/n12685017.md#1">回顾腊八粥缘起 乱世中传达什么救人讯息？</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/21/n12703759.md#1">【时事纵横】拜登首日就错？欧议员吁制裁陈全国</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/21/n12703209.md#1">【财商天下】四年成绩亮眼 川普：我将再次归来</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/22/n12704341.md#1">【西岸观察】家族丑闻缠身 拜登上任遭弹劾</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12701395.md#1">拜登：川普给我留下一封“非常仁慈”的信</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12698957.md#1">【秦鹏直播】川普告别演讲 释放何信息？</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12699391.md#1">【重播】川普总统离任仪式 飞抵佛罗里达</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/19/n12698651.md#1">获章子怡热情颁奖 赵丽颖一动作引赞赏</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12698979.md#1">郑爽代孕风波引爆舆论 杨颖等女星无辜受牵连</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/19/n12698452.md#1">郑爽代孕弃养丑闻发酵 合作方纷纷解约和封杀</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/19/n12697332.md#1">唐绮阳身体出状况 感伤今年运势书将是告别作</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12701010.md#1">与母亲温馨合照曝光 古天乐孝顺事迹获爆赞</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12699617.md#1">英媒卧底调查：武汉医生被政府要求隐瞒疫情</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/16/n12691930.md#1">大寒是吃种子最佳时节！肾虚者别错过最后机会</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12699879.md#1">天天化妆22年的妻子决定周日公休 丈夫抱怨</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12700875.md#1">如何区分新冠肺炎、慢性咳嗽、过敏？2招判断</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/21/n12701846.md#1">英男拄拐杖走路 小狗学他跛行 原因感人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rnrmrq3333/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rnrmrq3333/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/29/n10346474.htm">心理医生：神韵揭示人类回归神的真正意义</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/29/n10346474.htm">心理医生：神韵揭示人类回归神的真正意义</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rnrmrq3333/djy/blob/master/gb/18/4/29/n10346474.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rnrmrq3333/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rnrmrq3333/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/4/29/n10346474.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
